--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.4",
+    "express": "^4.17.1",
+    "nodemon": "^1.18.3",
+    "pg": "^7.4.3",
+    "redis": "^2.8.0"
   }
 }
