--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,3 +2,14 @@ version: '3'
 services:
     postgres:
         image: 'postgres:latest'
+    redis:
+        image: 'redis:latest'
+    server: 
+        restart: always
+        build: 
+            context: ./server
+            dockerfile: Dockerfile.dev
+        volumes:
+            - /app/node_modules
+            - ./server:/app
+        stdin_open: true
