--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
     postgres:
         image: 'postgres:latest'
+        environment:
+            - PGPASSWORD=postgres_password
     redis:
         image: 'redis:latest'
     server: 
@@ -13,3 +15,11 @@ services:
             - /app/node_modules
             - ./server:/app
         stdin_open: true
+        environment:
+            - REDIS_HOST=redis
+            - REDIS_PORT=6379
+            - PGUSER=postgres
+            - PGHOST=postgres
+            - PGDATABASE=postgres
+            - PGPASSWORD=postgres_password
+            - PGPORT=5432
