--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,16 @@ services:
     postgres:
         image: 'postgres:latest'
         environment:
-            - PGPASSWORD=postgres_password
+            - POSTGRES_PASSWORD=postgres_password
     redis:
         image: 'redis:latest'
     api: 
-        restart: always
         build: 
             context: ./server
             dockerfile: Dockerfile.dev
         volumes:
             - /app/node_modules
             - ./server:/app
-        stdin_open: true
         environment:
             - REDIS_HOST=redis
             - REDIS_PORT=6379
@@ -28,8 +26,9 @@ services:
             context: ./client
             dockerfile: Dockerfile.dev
         volumes:
-            - /app/nodeu_modules
+            - /app/node_modules
             - ./client:/app
+        stdin_open: true
     worker:
         build:
             context: ./worker
@@ -37,3 +36,10 @@ services:
         volumes:
             - /app/node_modules
             - ./worker:/app
+    nginx:
+        restart: always
+        build:
+            context: ./nginx
+            dockerfile: Dockerfile.dev
+        ports: 
+            - '3050:80'
