--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
             - PGDATABASE=postgres
             - PGPASSWORD=postgres_password
             - PGPORT=5432
+        depends_on:
+            - postgres
     client:
         build:
             context: ./client
@@ -36,7 +38,13 @@ services:
         volumes:
             - /app/node_modules
             - ./worker:/app
+        environment:
+            - REDIS_HOST=redis
+            - REDIS_PORT=6379
     nginx:
+        depends_on:
+            - api
+            - client
         restart: always
         build:
             context: ./nginx
