--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,16 @@ after_success:
     - docker push roryr2l/multi-worker
     - docker push roryr2l/multi-server
     - docker push roryr2l/multi-nginx
+
+deploy:
+    edge: true
+    provider: elasticbeanstalk
+    region: "eu-west-2"
+    name: "multi-docker"
+    env: "MultiDocker-env"
+    bucket_name: "elasticbeanstalk-eu-west-2-503686880813"
+    bucket_path: "multi-docker"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
