--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ after_success:
 deploy:
     provider: elasticbeanstalk
     region: "eu-west-2"
-    name: "multi-docker"
+    app: "multi-docker"
     env: "MultiDocker-env"
     bucket_name: "elasticbeanstalk-eu-west-2-503686880813"
     bucket_path: "multi-docker"
