--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,11 @@ after_success:
 
 deploy:
     provider: elasticbeanstalk
-    region: "eu-west-2"
-    app: "multi-docker"
-    env: "MultiDocker-env"
-    bucket_name: "elasticbeanstalk-eu-west-2-503686880813"
-    bucket_path: "multi-docker"
+    region: eu-west-2
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-eu-west-2-503686880813
+    bucket_path: multi-docker
     on:
         branch: master
     access_key_id: $AWS_ACCESS_KEY
