--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ deploy:
     provider: elasticbeanstalk
     region: eu-west-2
     app: multi-docker
-    env: MultiDocker-env
+    env: MultiDocker-env-1
     bucket_name: elasticbeanstalk-eu-west-2-503686880813
     bucket_path: multi-docker
     on:
